// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatAvatar /> should display no image 1`] = `
<div
  class="avatar-container css-1j6zot1"
>
  <div
    class="avatar css-hbesmq"
    size="32"
  >
    AN
  </div>
</div>
`;

exports[`<ChatAvatar /> should display placeholder image 1`] = `
<div
  class="avatar-container css-1j6zot1"
>
  <div
    class="avatar css-1krxo19"
    size="32"
    src="company-logo-url.jpg"
  >
    <i
      class="material-icons"
    >
      person
    </i>
  </div>
</div>
`;
